[package]
name = "thread_cell"
description = "A safe wrapper for non-Send/Sync types that pins them to a single thread and provides a handle that can be moved across threads"
license = "Apache-2.0"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
crossbeam = "0.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "thread_cell_bench"
harness = false
