[package]
name = "thread_cell"
description = "Safe, Send + Sync access to !Send/!Sync data by isolating it on a dedicated thread and interacting with it through message passing. Perfect for Rc, RefCell, and other single-threaded types."
license = "Apache-2.0"
version = "0.2.1"
readme = "README.md"
repository = "https://github.com/mcmah309/thread_cell"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["sync"], optional = true }
crossbeam = "0.8"

[features]
default = []

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
tokio = { version = "1", features = ["full"] }

# `cargo bench --all-features`
[[bench]]
name = "thread_cell_bench"
harness = false
required-features = ["tokio"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
